--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "pandas>=2.0.0",
     "google-api-python-client>=2.0.0",
     "toolz",
-    "task-flows",
+    "taskflows",
 ]
 
 [project.optional-dependencies]
